--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 Portfolio
               </h3>
               <p class="subtitle-a">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Here are some recent works.
               </p>
               <div class="line-mf"></div>
             </div>
